--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sreedhar7/ember-app-scheduler.git",
+    "url": "https://github.com/sreedhar7/ember-app-scheduler.git"
   },
   "scripts": {
     "build": "ember build",
