--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.15.0",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.2.3",
+    "qunit-dom": "^0.5.0"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
