--- a/package.json
+++ b/package.json
@@ -18,7 +18,14 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "ember try:each"
+    "test": "ember try:each",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "package.json,{app,addon,config,tests}/**/*.{js,json}": [
+      "prettier --single-quote --trailing-comma es5 --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "ember-cli-babel": "^6.3.0"
@@ -43,6 +50,7 @@
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.15.0",
     "loader.js": "^4.2.3",
+    "prettier": "^1.10.2",
     "qunit-dom": "^0.5.0"
   },
   "engines": {
