--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.15.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.5.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^6.0.0",
     "loader.js": "^4.2.3",
     "prettier": "^1.10.2",
     "qunit-dom": "^0.5.0"
