--- a/package.json
+++ b/package.json
@@ -35,11 +35,10 @@
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.15.1",
     "ember-cli-dependency-checker": "^2.0.0",
-    "ember-cli-eslint": "^4.0.0",
+    "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-qunit": "^4.3.2",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
@@ -47,7 +46,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-qunit": "3.4.0",
+    "ember-qunit": "^3.4.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "2.18.0",
     "eslint-config-prettier": "^2.9.0",
