--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "ember-source": "3.1.2",
     "ember-try": "^0.2.23",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.5.0",
+    "eslint-plugin-prettier": "2.5.0",
     "husky": "^0.14.3",
     "lint-staged": "^6.0.0",
     "loader.js": "^4.2.3",
