--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     ]
   },
   "dependencies": {
-    "ember-cli-babel": "^7.1.3",
     "@types/ember": "^3.0.23",
-    "@types/rsvp": "^4.0.2"
+    "@types/rsvp": "^4.0.2",
+    "ember-cli-babel": "^7.1.3"
   },
   "devDependencies": {
     "@glimmer/env": "^0.1.7",
