--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "dependencies": {
     "@types/ember": "^3.0.23",
     "@types/rsvp": "^4.0.2",
-    "ember-cli-babel": "^7.1.3"
+    "ember-cli-babel": "^7.1.3",
+    "ember-compatibility-helpers": "^1.1.2"
   },
   "devDependencies": {
     "@glimmer/env": "^0.1.7",
@@ -49,6 +50,7 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-typescript": "^1.4.3",
     "ember-cli-uglify": "^2.1.0",
+    "ember-cli-version-checker": "^2.1.2",
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
