--- a/package.json
+++ b/package.json
@@ -68,6 +68,12 @@
     "qunit-dom": "^0.8.0",
     "typescript": "^3.1.1"
   },
+  "resolutions": {
+    "@types/ember__object": "~3.0.6",
+    "@types/ember__component": "~3.0.4",
+    "@types/ember__routing": "~3.0.6",
+    "@types/ember__error": "~3.0.2"
+  },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
   },
