--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.0.0",
     "ember-resolver": "^5.0.0",
+    "ember-router-scroll": "^1.1.0",
     "ember-source": "3.8.0",
     "ember-try": "^1.0.0",
     "eslint-config-prettier": "^4.0.0",
