--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "scripts": {
     "build": "ember build",
-    "start": "ember server",
-    "test": "ember try:each",
+    "lint:hbs": "ember-template-lint .",
+    "lint:js": "eslint .",
+    "start": "ember serve",
+    "test": "ember test",
+    "test:all": "ember try:each",
     "prepublishOnly": "ember ts:precompile",
     "postpublish": "ember ts:clean"
   },
@@ -32,19 +35,20 @@
     "@types/ember": "^3.1.0",
     "@types/rsvp": "^4.0.2",
     "ember-cli-babel": "^7.1.3",
+    "ember-cli-typescript": "^2.0.0",
     "ember-compatibility-helpers": "^1.1.2"
   },
   "devDependencies": {
+    "@ember/optional-features": "^0.6.3",
     "@glimmer/env": "^0.1.7",
     "@types/ember-test-helpers": "^1.0.3",
     "@types/ember-testing-helpers": "^0.0.3",
     "@types/ember__test-helpers": "^0.7.5",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-ajax": "^5.0.0",
     "ember-cli": "~3.8.0",
     "ember-cli-addon-docs": "^0.6.7",
     "ember-cli-addon-docs-esdoc": "^0.2.1",
-    "ember-cli-dependency-checker": "^3.0.0",
+    "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^1.1.1",
     "ember-cli-deploy-git": "^1.3.3",
@@ -53,9 +57,7 @@
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^2.1.0",
     "ember-cli-inject-live-reload": "^2.0.1",
-    "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-typescript": "^2.0.0",
     "ember-cli-uglify": "^2.1.0",
     "ember-cli-version-checker": "^3.0.0",
     "ember-disable-prototype-extensions": "^1.1.2",
@@ -66,8 +68,11 @@
     "ember-resolver": "^5.0.0",
     "ember-router-scroll": "^1.1.0",
     "ember-source": "3.8.0",
+    "ember-source-channel-url": "^1.1.0",
     "ember-try": "^1.0.0",
     "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-ember": "^5.2.0",
+    "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-prettier": "^3.0.0",
     "husky": "^1.1.0",
     "lint-staged": "^8.0.4",
@@ -83,7 +88,7 @@
     "@types/ember__error": "~3.0.2"
   },
   "engines": {
-    "node": "^4.5 || 6.* || >= 7.*"
+    "node": "6.* || 8.* || >= 10.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
