Fixing ember-cli-addon-docs deploy

--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "@types/ember__error": "~3.0.2"
   },
   "engines": {
-    "node": "6.* || 8.* || >= 10.*"
+    "node": "8.* || >= 10.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
