--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "broccoli-asset-rev": "^3.0.0",
     "ember-cli": "~3.8.0",
     "ember-cli-addon-docs": "^0.6.7",
-    "ember-cli-addon-docs-esdoc": "^0.2.1",
+    "ember-cli-addon-docs-yuidoc": "^0.2.1",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^1.1.1",
@@ -90,7 +90,7 @@
     "@types/ember__error": "~3.0.2"
   },
   "engines": {
-    "node": "6.* || 8.* || >= 10.*"
+    "node": "8.* || >= 10.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
