--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "@types/ember__object": "~3.0.6",
     "@types/ember__component": "~3.0.4",
     "@types/ember__routing": "~3.0.6",
-    "@types/ember__error": "~3.0.2"
+    "@types/ember__error": "~3.0.2",
+    "**/ember-app-scheduler": "link:./"
   },
   "engines": {
     "node": "8.* || >= 10.*"
