--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
     "@types/ember__component": "~3.0.4",
     "@types/ember__routing": "~3.0.6",
     "@types/ember__error": "~3.0.2",
-    "**/ember-app-scheduler": "link:./"
+    "**/ember-app-scheduler": "link:./",
+    "favicons": "5.3.0"
   },
   "engines": {
     "node": "8.* || >= 10.*"
