--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ember-cli-deploy-build": "^2.0.0",
     "ember-cli-deploy-git": "^1.3.3",
     "ember-cli-deploy-git-ci": "^1.0.1",
+    "ember-cli-fastboot": "^2.2.1",
     "ember-cli-favicon": "^2.0.0",
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^3.0.0",
