--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "ember-cli-deploy-build": "^2.0.0",
     "ember-cli-deploy-git": "^1.3.3",
     "ember-cli-deploy-git-ci": "^1.0.1",
+    "ember-cli-fastboot": "^2.2.1",
+    "ember-cli-fastboot-testing": "^0.2.1",
     "ember-cli-favicon": "^2.0.0",
     "ember-cli-htmlbars": "^4.0.0",
     "ember-cli-htmlbars-inline-precompile": "^3.0.0",
@@ -62,6 +64,7 @@
     "ember-cli-version-checker": "^3.0.0",
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
+    "ember-fetch": "^6.7.1",
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.0.0",
