--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/ember-test-helpers": "^1.0.3",
     "@types/ember-testing-helpers": "^0.0.4",
     "@types/ember__test-helpers": "^0.7.5",
+    "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
     "ember-cli": "~3.18.0",
     "ember-cli-addon-docs": "^0.7.0",
