--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@types/rsvp": "^4.0.2",
     "ember-cli-babel": "^7.1.3",
     "ember-cli-typescript": "^2.0.0",
-    "ember-compatibility-helpers": "^1.1.2"
+    "ember-compatibility-helpers": "^1.1.2",
+    "ember-test-waiters": "^1.1.1"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.0.0",
