Updating to gh badge

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -31,6 +31,7 @@ jobs:
       - name: install dependencies
         run: yarn install
       - name: lint
+        run: yarn lint:hbs
         run: yarn lint:js
       - name: test
         run: yarn test
