--- a/package.json
+++ b/package.json
@@ -5,26 +5,32 @@
   "keywords": [
     "ember-addon"
   ],
+  "homepage": "https://ember-app-scheduler.github.io/ember-app-scheduler",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ember-app-scheduler/ember-app-scheduler.git"
+  },
   "license": "MIT",
   "author": "",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ember-app-scheduler/ember-app-scheduler.git"
-  },
   "scripts": {
     "build": "ember build",
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
+    "prepublishOnly": "ember ts:precompile",
+    "postpublish": "ember ts:clean",
     "start": "ember serve",
     "test": "ember test",
-    "test:prod": "ember test --environment=production",
     "test:all": "ember try:each",
-    "prepublishOnly": "ember ts:precompile",
-    "postpublish": "ember ts:clean"
+    "test:prod": "ember test --environment=production"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "package.json,{app,addon,config,tests}/**/*.{js,json}": [
@@ -86,27 +92,39 @@
     "loader.js": "^4.2.3",
     "prettier": "^1.10.2",
     "qunit-dom": "^0.9.0",
+    "release-it": "^12.2.1",
+    "release-it-lerna-changelog": "^1.0.3",
     "typescript": "^3.1.1"
   },
   "resolutions": {
-    "@types/ember__object": "~3.0.6",
+    "**/ember-app-scheduler": "link:./",
     "@types/ember__component": "~3.0.4",
     "@types/ember__debug": "~3.0.6",
-    "@types/ember__routing": "~3.0.6",
     "@types/ember__error": "~3.0.2",
-    "**/ember-app-scheduler": "link:./",
+    "@types/ember__object": "~3.0.6",
+    "@types/ember__routing": "~3.0.6",
     "favicons": "5.3.0"
   },
   "engines": {
     "node": "8.* || >= 10.*"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
   "ember-addon": {
     "configPath": "tests/dummy/config"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
+  "release-it": {
+    "plugins": {
+      "release-it-lerna-changelog": {
+        "infile": "CHANGELOG.md"
+      }
+    },
+    "git": {
+      "tagName": "v${version}"
+    },
+    "github": {
+      "release": true
     }
-  },
-  "homepage": "https://ember-app-scheduler.github.io/ember-app-scheduler"
+  }
 }
