--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "favicons": "5.3.0"
   },
   "engines": {
-    "node": "8.* || >= 10.*"
+    "node": ">= 10.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
