--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "favicons": "5.3.0"
   },
   "engines": {
-    "node": "8.* || >= 10.*"
+    "node": ">= 10.*"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
