--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -48,14 +48,13 @@ jobs:
       fail-fast: true
       matrix:
         ember-try-scenario:
-          - ember-lts-3.4
-          - ember-lts-3.8
-          - ember-lts-3.12
+          - ember-lts-3.16
           - ember-release
           - ember-beta
           - ember-canary
           - ember-default
           - ember-default-with-jquery
+          - ember-classic
 
     steps:
       - uses: actions/checkout@v1
