--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "ember build",
     "lint:hbs": "ember-template-lint .",
-    "lint:js": "eslint .",
+    "lint:js": "eslint . --ext js,ts",
     "prepublishOnly": "ember ts:precompile",
     "postpublish": "ember ts:clean",
     "start": "ember serve",
@@ -34,30 +34,33 @@
   },
   "lint-staged": {
     "package.json,{app,addon,config,tests}/**/*.{js,json}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "dependencies": {
     "@types/ember": "^3.1.0",
     "@types/rsvp": "^4.0.2",
-    "ember-cli-babel": "^7.1.3",
+    "ember-cli-babel": "^7.19.0",
     "ember-cli-typescript": "^2.0.0",
     "ember-compatibility-helpers": "^1.1.2",
     "ember-test-waiters": "^2.0.0"
   },
   "devDependencies": {
-    "@ember/optional-features": "^1.0.0",
+    "@ember/optional-features": "^1.3.0",
+    "@glimmer/component": "^1.0.0",
     "@glimmer/env": "^0.1.7",
+    "@glimmer/tracking": "^1.0.0",
     "@types/ember-test-helpers": "^1.0.3",
     "@types/ember-testing-helpers": "^0.0.4",
     "@types/ember__test-helpers": "^0.7.5",
-    "babel-eslint": "^10.0.3",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-cli": "~3.18.0",
     "ember-cli-addon-docs": "^0.7.0",
     "ember-cli-addon-docs-yuidoc": "^0.2.1",
-    "ember-cli-dependency-checker": "^3.1.0",
+    "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^2.0.0",
     "ember-cli-deploy-git": "^1.3.3",
@@ -66,33 +69,32 @@
     "ember-cli-fastboot-testing": "^0.4.0",
     "ember-cli-favicon": "^2.0.0",
     "ember-cli-htmlbars": "^5.0.0",
-    "ember-cli-htmlbars-inline-precompile": "^3.0.0",
-    "ember-cli-inject-live-reload": "^2.0.1",
-    "ember-cli-sri": "^2.1.0",
+    "ember-cli-inject-live-reload": "^2.0.2",
+    "ember-cli-sri": "^2.1.1",
     "ember-cli-uglify": "^3.0.0",
     "ember-cli-version-checker": "^5.0.1",
-    "ember-disable-prototype-extensions": "^1.1.2",
-    "ember-export-application-global": "^2.0.0",
+    "ember-disable-prototype-extensions": "^1.1.3",
+    "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.1",
-    "ember-load-initializers": "^2.0.0",
+    "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator-for-testing": "^1.0.0",
-    "ember-qunit": "^4.0.0",
+    "ember-qunit": "^4.6.0",
     "ember-resolver": "^8.0.0",
     "ember-router-scroll": "^1.1.0",
     "ember-source": "3.19.0",
     "ember-source-channel-url": "^2.0.1",
-    "ember-template-lint": "^2.0.1",
-    "ember-try": "^1.0.0",
+    "ember-template-lint": "^2.6.0",
+    "ember-try": "^1.4.0",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-ember": "^8.1.1",
-    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-ember": "^8.5.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.0.0",
     "husky": "^4.0.1",
     "lint-staged": "^10.0.0",
-    "loader.js": "^4.2.3",
+    "loader.js": "^4.7.0",
     "prettier": "^1.10.2",
-    "qunit-dom": "^1.0.0",
+    "qunit-dom": "^1.2.0",
     "release-it": "^13.0.1",
     "release-it-lerna-changelog": "^2.0.0",
     "typescript": "^3.1.1"
@@ -108,6 +110,9 @@
   },
   "engines": {
     "node": ">= 10.*"
+  },
+  "ember": {
+    "edition": "octane"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
