refactor: use `RouterService` and auto-register

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,9 @@
       "ember-app-scheduler/test-support/*": [
         "addon-test-support/*"
       ],
+      "@ember/destroyable": [
+        "node_modules/ember-destroyable-polyfill"
+      ],
       "*": [
         "types/*"
       ]
