--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ember-cli-babel": "^7.19.0",
     "ember-cli-typescript": "^3.1.4",
     "ember-compatibility-helpers": "^1.1.2",
+    "ember-destroyable-polyfill": "^1.0.0",
     "ember-test-waiters": "^2.0.0"
   },
   "devDependencies": {
