--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build",
+    "build": "ember build --environment=production",
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint . --ext js,ts",
     "prepublishOnly": "ember ts:precompile",
@@ -38,18 +38,18 @@
     ]
   },
   "dependencies": {
+    "@ember/test-waiters": "^2.2.0",
     "@types/ember": "^3.1.0",
     "@types/rsvp": "^4.0.2",
-    "ember-cli-babel": "^7.19.0",
+    "ember-cli-babel": "^7.22.1",
     "ember-cli-typescript": "^3.1.4",
-    "ember-compatibility-helpers": "^1.1.2",
-    "ember-test-waiters": "^2.0.0"
+    "ember-compatibility-helpers": "^1.1.2"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
-    "@glimmer/component": "^1.0.0",
+    "@glimmer/component": "^1.0.2",
     "@glimmer/env": "^0.1.7",
-    "@glimmer/tracking": "^1.0.0",
+    "@glimmer/tracking": "^1.0.2",
     "@types/ember-test-helpers": "^1.0.3",
     "@types/ember-testing-helpers": "^0.0.4",
     "@types/ember__test-helpers": "^1.7.0",
@@ -57,8 +57,8 @@
     "@typescript-eslint/parser": "^3.7.0",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-cli": "~3.21.0",
-    "ember-cli-addon-docs": "^0.8.0",
+    "ember-cli": "~3.22.0",
+    "ember-cli-addon-docs": "^0.10.0",
     "ember-cli-addon-docs-yuidoc": "^0.2.1",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-deploy": "^1.0.2",
@@ -71,7 +71,7 @@
     "ember-cli-htmlbars": "^5.0.0",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-uglify": "^3.0.0",
+    "ember-cli-terser": "^4.0.0",
     "ember-cli-version-checker": "^5.0.1",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.1",
@@ -80,12 +80,11 @@
     "ember-maybe-import-regenerator-for-testing": "^1.0.0",
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^8.0.0",
-    "ember-router-scroll": "^1.1.0",
     "ember-source": "3.22.0",
     "ember-source-channel-url": "^3.0.0",
-    "ember-template-lint": "^2.6.0",
+    "ember-template-lint": "^2.14.0",
     "ember-try": "^1.4.0",
-    "eslint": "^7.0.0",
+    "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-ember": "^9.3.0",
     "eslint-plugin-node": "^11.1.0",
@@ -94,7 +93,7 @@
     "lint-staged": "^10.0.0",
     "loader.js": "^4.7.0",
     "prettier": "^2.0.5",
-    "qunit-dom": "^1.2.0",
+    "qunit-dom": "^1.5.0",
     "release-it": "^14.0.1",
     "release-it-lerna-changelog": "^2.0.0",
     "typescript": "^4.0.2"
@@ -109,7 +108,7 @@
     "favicons": "5.3.0"
   },
   "engines": {
-    "node": ">= 10.*"
+    "node": "10.* || 12.* || >= 14"
   },
   "ember": {
     "edition": "octane"
