--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -20,7 +20,13 @@ jobs:
 
     steps:
       - if: matrix.os == 'macOS-latest'
+        # MacOS resp. homebrew needs workarounds to make it less unstable.
+        # See https://github.com/actions/virtual-environments/issues/1811#issuecomment-708480190
         run: |
+          brew uninstall openssl@1.0.2t || true
+          brew uninstall python@2.7.17 || true
+          brew untap local/openssl || true
+          brew untap local/python2 || true
           brew update
           brew cask install google-chrome
           brew cask install firefox
