refactor: use `RouterService` and auto-destroy (#773)
* refactor: use `RouterService` and auto-register

* Adding test cases to test both supported router lookups

* Adding deprecation warning for use of router:main

* Removing debugger

* Removing macos-latest

* Moving to use destroyables for reset

* Updating docs to reflect changes to API for reset

* Re-rolling lockfile

* Removing initializers

Co-authored-by: Steve Calvert <scalvert@linkedin.com>

--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
   "dependencies": {
     "@types/ember": "^3.1.0",
     "@types/rsvp": "^4.0.2",
-    "ember-cli-babel": "^7.19.0",
+    "ember-cli-babel": "^7.23.0",
     "ember-cli-typescript": "^3.1.4",
     "ember-compatibility-helpers": "^1.1.2",
+    "ember-destroyable-polyfill": "^2.0.2",
     "ember-test-waiters": "^2.0.0"
   },
   "devDependencies": {
