--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "dependencies": {
+    "@ember/test-waiters": "^2.3.0",
     "@types/ember": "^3.1.0",
     "@types/rsvp": "^4.0.2",
     "ember-cli-babel": "^7.23.0",
