--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     ]
   },
   "dependencies": {
+    "@ember/test-waiters": "^2.3.0",
     "@types/ember": "^3.1.0",
     "@types/rsvp": "^4.0.2",
     "ember-cli-babel": "^7.23.0",
     "ember-cli-typescript": "^3.1.4",
     "ember-compatibility-helpers": "^1.1.2",
-    "ember-destroyable-polyfill": "^2.0.2",
-    "ember-test-waiters": "^2.0.0"
+    "ember-destroyable-polyfill": "^2.0.2"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
@@ -54,8 +54,8 @@
     "@types/ember-test-helpers": "^1.0.3",
     "@types/ember-testing-helpers": "^0.0.4",
     "@types/ember__test-helpers": "^1.7.0",
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "@typescript-eslint/parser": "^3.7.0",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-cli": "~3.21.0",
