--- a/package.json
+++ b/package.json
@@ -96,8 +96,8 @@
     "loader.js": "^4.7.0",
     "prettier": "^2.0.5",
     "qunit-dom": "^1.2.0",
-    "release-it": "^14.0.1",
-    "release-it-lerna-changelog": "^2.0.0",
+    "release-it": "^14.2.1",
+    "release-it-lerna-changelog": "^3.1.0",
     "typescript": "^4.0.2"
   },
   "resolutions": {
@@ -132,7 +132,8 @@
       "changelog": "git log --pretty=format:\"* %s (%h)\" --no-merges --perl-regexp --author=\"^((?!dependabot-preview).*)$\" ${latestTag}...HEAD"
     },
     "github": {
-      "release": true
+      "release": true,
+      "tokenRef": "GITHUB_AUTH"
     }
   }
 }
