--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "start": "ember serve",
     "test": "ember test",
     "test:all": "ember try:each",
-    "test:prod": "ember test --environment=production"
+    "test:prod": "ember test --environment=production",
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
@@ -107,7 +108,8 @@
     "@types/ember__error": "~3.0.2",
     "@types/ember__object": "~3.0.6",
     "@types/ember__routing": "~3.0.6",
-    "favicons": "5.3.0"
+    "favicons": "5.3.0",
+    "cheerio": "1.0.0-rc.2"
   },
   "engines": {
     "node": ">= 10.*"
