--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "cheerio": "1.0.0-rc.2"
   },
   "engines": {
-    "node": ">= 10.*"
+    "node": "12.* || 14.* || >= 16"
   },
   "ember": {
     "edition": "octane"
