--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
+    "@embroider/test-setup": "^0.41.0",
     "@glimmer/component": "^1.0.0",
     "@glimmer/env": "^0.1.7",
     "@glimmer/tracking": "^1.0.0",
