--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@typescript-eslint/parser": "^4.6.1",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
+    "ember-auto-import": "^2.2.3",
     "ember-cli": "~3.26.0",
     "ember-cli-addon-docs": "^4.0.3",
     "ember-cli-addon-docs-yuidoc": "^1.0.0",
@@ -75,6 +76,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-uglify": "^3.0.0",
     "ember-cli-version-checker": "^5.0.1",
+    "ember-data": "^3.28.3",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.1",
@@ -99,7 +101,8 @@
     "qunit-dom": "^1.2.0",
     "release-it": "^14.2.1",
     "release-it-lerna-changelog": "^3.1.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "webpack": "^5.58.2"
   },
   "resolutions": {
     "**/ember-app-scheduler": "link:./",
