Upgrading test dependencies

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
+    "@ember/test-helpers": "^2.5.0",
     "@glimmer/component": "^1.0.0",
     "@glimmer/env": "^0.1.7",
     "@glimmer/tracking": "^1.0.0",
@@ -82,7 +83,7 @@
     "ember-fetch": "^8.0.1",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator-for-testing": "^1.0.0",
-    "ember-qunit": "^4.6.0",
+    "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.0",
     "ember-router-scroll": "^4.0.0",
     "ember-source": "3.26.1",
@@ -98,7 +99,8 @@
     "lint-staged": "^10.0.0",
     "loader.js": "^4.7.0",
     "prettier": "^2.0.5",
-    "qunit-dom": "^1.2.0",
+    "qunit": "^2.17.2",
+    "qunit-dom": "^2.0.0",
     "release-it": "^14.2.1",
     "release-it-lerna-changelog": "^3.1.0",
     "typescript": "^4.0.2",
