--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "ember-cli-deploy-build": "^2.0.0",
     "ember-cli-deploy-git": "^1.3.3",
     "ember-cli-deploy-git-ci": "^1.0.1",
-    "ember-cli-fastboot": "^2.2.1",
+    "ember-cli-fastboot": "^3.2.0-beta.4",
     "ember-cli-fastboot-testing": "^0.5.0",
     "ember-cli-favicon": "^2.0.0",
     "ember-cli-htmlbars": "^5.0.0",
