--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
+    "@ember/test-helpers": "^2.5.0",
     "@glimmer/component": "^1.0.0",
     "@glimmer/env": "^0.1.7",
     "@glimmer/tracking": "^1.0.0",
@@ -59,15 +60,16 @@
     "@typescript-eslint/parser": "^4.6.1",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
+    "ember-auto-import": "^2.2.3",
     "ember-cli": "~3.26.0",
-    "ember-cli-addon-docs": "^0.8.0",
+    "ember-cli-addon-docs": "^4.0.3",
     "ember-cli-addon-docs-yuidoc": "^1.0.0",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^2.0.0",
     "ember-cli-deploy-git": "^1.3.3",
     "ember-cli-deploy-git-ci": "^1.0.1",
-    "ember-cli-fastboot": "^2.2.1",
+    "ember-cli-fastboot": "^3.2.0-beta.4",
     "ember-cli-fastboot-testing": "^0.5.0",
     "ember-cli-favicon": "^2.0.0",
     "ember-cli-htmlbars": "^5.0.0",
@@ -75,12 +77,13 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-uglify": "^3.0.0",
     "ember-cli-version-checker": "^5.0.1",
+    "ember-data": "^3.28.3",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.1",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator-for-testing": "^1.0.0",
-    "ember-qunit": "^4.6.0",
+    "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.0",
     "ember-router-scroll": "^4.0.0",
     "ember-source": "3.26.1",
@@ -96,10 +99,12 @@
     "lint-staged": "^10.0.0",
     "loader.js": "^4.7.0",
     "prettier": "^2.0.5",
-    "qunit-dom": "^1.2.0",
+    "qunit": "^2.17.2",
+    "qunit-dom": "^2.0.0",
     "release-it": "^14.2.1",
     "release-it-lerna-changelog": "^3.1.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "webpack": "^5.58.2"
   },
   "resolutions": {
     "**/ember-app-scheduler": "link:./",
