--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^2.2.3",
-    "ember-cli": "~3.26.0",
+    "ember-cli": "^3.28.3",
     "ember-cli-addon-docs": "^4.0.3",
     "ember-cli-addon-docs-yuidoc": "^1.0.0",
     "ember-cli-dependency-checker": "^3.2.0",
@@ -75,7 +75,6 @@
     "ember-cli-htmlbars": "^5.0.0",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-uglify": "^3.0.0",
     "ember-cli-version-checker": "^5.0.1",
     "ember-data": "^3.28.3",
     "ember-disable-prototype-extensions": "^1.1.3",
@@ -86,7 +85,7 @@
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.0",
     "ember-router-scroll": "^4.0.0",
-    "ember-source": "3.26.1",
+    "ember-source": "^3.28.1",
     "ember-source-channel-url": "^3.0.0",
     "ember-template-lint": "^3.0.1",
     "ember-try": "^1.4.0",
