--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "ember-cli-htmlbars": "^5.0.0",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
+    "ember-cli-terser": "^4.0.2",
     "ember-cli-version-checker": "^5.0.1",
     "ember-data": "^3.28.3",
     "ember-disable-prototype-extensions": "^1.1.3",
