--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -49,7 +49,7 @@ jobs:
     needs: 'test'
 
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         try-scenario:
           - ember-lts-3.16
