Fix embroider-optimized scenario to make CI pass

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -61,7 +61,7 @@ jobs:
           - ember-classic
           - ember-default-with-jquery
           - embroider-safe
-#          - embroider-optimized
+          - embroider-optimized
 
     steps:
       - uses: actions/checkout@v2
