--- a/.npmignore
+++ b/.npmignore
@@ -10,10 +10,14 @@
 /.editorconfig
 /.ember-cli
 /.env*
+/.eslintcache
 /.eslintignore
 /.eslintrc.js
 /.git/
+/.github/
 /.gitignore
+/.prettierignore
+/.prettierrc
 /.template-lintrc.js
 /.travis.yml
 /.watchmanconfig
@@ -23,12 +27,20 @@
 /ember-cli-build.js
 /testem.js
 /tests/
+/yarn-error.log
 /yarn.lock
 .gitkeep
 
 # ember-try
 /.node_modules.ember-try/
 /bower.json.ember-try
+/npm-shrinkwrap.json.ember-try
 /package.json.ember-try
+/package-lock.json.ember-try
+/yarn.lock.ember-try
 
+# custom
+/.husky/
 /config/addon-docs.js
+/config/deploy.js
+/RELEASE.md
