--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "eslint-plugin-ember": "^10.5.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-qunit": "^7.0.0",
     "husky": "^6.0.0",
     "lint-staged": "^10.0.0",
     "loader.js": "^4.7.0",
