--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -48,7 +48,7 @@ jobs:
           - ember-default-with-jquery
           - ember-classic
           - embroider-safe
-          - embroider-optimized
+          #- embroider-optimized
 
     steps:
       - uses: actions/checkout@v1
