--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -26,7 +26,7 @@ jobs:
           yarn lint:hbs
           yarn lint:js
       - name: test
-        run: yarn test
+        run: yarn test:ember
 
   try-scenarios:
     name: ${{ matrix.ember-try-scenario }}
@@ -40,12 +40,15 @@ jobs:
       matrix:
         ember-try-scenario:
           - ember-lts-3.16
+          - ember-lts-3.20
+          - ember-lts-3.24
           - ember-release
           - ember-beta
           - ember-canary
-          - ember-default
           - ember-default-with-jquery
           - ember-classic
+          - embroider-safe
+          #- embroider-optimized
 
     steps:
       - uses: actions/checkout@v1
